# overmind

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: overmind.conf.example
scripts/: notify_high_rate.py
src/overmind/: __init__.py  cli.py
src/overmind/config/: __init__.py  settings.py
src/overmind/controllers/: __init__.py  temperature.py
src/overmind/sensors/: __init__.py  temperature.py  wattrouter.py  weather.py
tests/: __init__.py  conftest.py
tests/fixtures/: conf_get.xml  conf_post.xml  meas.xml  mock_w1_slave.txt
tests/unit/: test_ds18b20_sensor.py  test_settings.py  test_temperature_controller.py  test_wattrouter_client.py  test_weather_service.py
